src/objects/MentorCourseGroupToBanner__c.object
<CustomObject>
    <fields>
        <fullName>ActionNeeded__c</fullName>
        <label>Action Needed</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CourseNumber__c</fullName>
        <label>Course Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastSynchronized__c</fullName>
        <label>Last Synchronized</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MentorCourseGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor Course Group</label>
        <referenceTo>MentorCourseGroup__c</referenceTo>
        <relationshipLabel>Mentor Course Groups To Banner</relationshipLabel>
        <relationshipName>MentorCourseGroupsToBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MentorGroupTableKey__c</fullName>
        <label>Mentor Group TableKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushResult__c</fullName>
        <label>Push Result</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RefId__c</fullName>
        <externalId>true</externalId>
        <label>Ref Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Mentor Course Group To Banner</label>
    <nameField>
        <displayFormat>MCG-{0000}</displayFormat>
        <label>Mentor Course Group To Banner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentor Course Groups To Banner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>